# Sysprog

doc/: A3-Client-Thread-Ablaufplan.graphml  Aufteilung.txt
quiz/: .gitignore  CMakeLists.txt  Makefile  README.txt  client  start.sh
quiz/catalogs/: questionsWithoutRightAnswer.cat  short.cat
quiz/common/: util.c  util.h
quiz/loader/: load.c  parser.c  parser.h
quiz/server/: catalog.c  catalog.h  clientthread.c  clientthread.h  login.c  login.h  main.c  mutexhelper.c  mutexhelper.h  rfc.c  rfc.h  rfchelper.c  rfchelper.h  score.c  score.h  threadholder.c  threadholder.h  user.c  user.h  usertimer.c  usertimer.h  vardefine.h
